feat: harden diagnostics execution and operations